syntax = "proto3";

package configure_server;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "configure_server.proto";

service Service {
  rpc PageServer (PageServerRequest) returns (PageServerReply) {
    option (google.api.http) = {
      get: "/configure/v1/servers",
    };
  } 

  rpc GetServer (GetServerRequest) returns (Server) {
    option (google.api.http) = {
      get: "/configure/v1/server",
    };
  }

  rpc AddServer (AddServerRequest) returns (AddServerReply) {
    option (google.api.http) = {
      post: "/configure/v1/server",
      body:"*"
    };
  }

  rpc UpdateServer (UpdateServerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/server",
      body:"*"
    };
  }

  rpc DeleteServer (DeleteServerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/configure/v1/server"
    };
  }
}